fix: 3/25 최종본 (정리 필요)

--- a/WebContent/hanyong/css/hy_style.css
+++ b/WebContent/hanyong/css/hy_style.css
@@ -28,6 +28,13 @@ hr{
     filter: blur(10px);
     margin: -10px;
 }
+#greeting{
+    margin-top: 0.5em;
+}
+
+#reset{
+    font-size: 13.3333px;
+}
 
 /* 기본속성 끝 */
 
