--- a/WebContent/hanyong/css/rank.css
+++ b/WebContent/hanyong/css/rank.css
@@ -15,6 +15,7 @@ body{
 }
 
 .swiper-slide {
+    margin-top: 100px;
     text-align: center;
     font-size: 18px;
     display: flex;
@@ -24,7 +25,7 @@ body{
 
 .swiper-slide img {
     display: block;
-    width: 50%;
+    width: 20%;
     height: 50%;
     object-fit: cover;
 }
@@ -32,8 +33,8 @@ body{
 
 table {
     width: 95vw;
-    margin: 3em auto 0 auto;
-    padding-top: 8em;
+    margin: 1em auto 0 auto;
+    padding-top: 1em;
 }
 
 .rank{
